--- a/src/windows/WindowMain.form
+++ b/src/windows/WindowMain.form
@@ -28,6 +28,9 @@
   <SubComponents>
     <Container class="javax.swing.JPanel" name="jpanelButtons">
       <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="33" green="33" red="33" type="rgb"/>
+        </Property>
         <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
           <Color id="Cursor Por defecto"/>
         </Property>
@@ -43,6 +46,9 @@
       <SubComponents>
         <Component class="javax.swing.JButton" name="btnOrder">
           <Properties>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="3" name="/resources/images/Bill_32px.png"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Pedido"/>
           </Properties>
           <Events>
@@ -51,6 +57,9 @@
         </Component>
         <Component class="javax.swing.JButton" name="btnPlate">
           <Properties>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="3" name="/resources/images/tray_24px.png"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Plato"/>
           </Properties>
           <Events>
@@ -59,6 +68,9 @@
         </Component>
         <Component class="javax.swing.JButton" name="btnDrink">
           <Properties>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="3" name="/resources/images/Bottle_32px.png"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Bebida"/>
           </Properties>
           <Events>
@@ -67,6 +79,9 @@
         </Component>
         <Component class="javax.swing.JButton" name="btnTable">
           <Properties>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="3" name="/resources/images/Table_32px.png"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Mesa"/>
           </Properties>
           <Events>
@@ -75,6 +90,9 @@
         </Component>
         <Component class="javax.swing.JButton" name="btnClose">
           <Properties>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="3" name="/resources/images/Close_32px.png"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Salir"/>
           </Properties>
           <Events>
@@ -92,6 +110,9 @@
       <SubComponents>
         <Component class="javax.swing.JButton" name="btnListOfOrders">
           <Properties>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="3" name="/resources/images/List_32px.png"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Lista de pedidos"/>
           </Properties>
           <Events>
