--- a/src/windows/WindowBoxOrderList.form
+++ b/src/windows/WindowBoxOrderList.form
@@ -64,6 +64,9 @@
               <SubComponents>
                 <Component class="javax.swing.JList" name="lstOrder">
                   <Properties>
+                    <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                      <Font name="Dialog" size="18" style="1"/>
+                    </Property>
                     <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.editors2.ListModelEditor">
                       <StringArray count="5">
                         <StringItem index="0" value="Item 1"/>
